--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,8 +2,8 @@ name: 'github actions getjson'
 
 on:
   push
-  #schedule:
-  #  - cron: '0 1,10 * * *'
+  schedule:
+    - cron: '0 1,10 * * *'
 
 jobs:
   bots:
