--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,7 +9,10 @@ jobs:
   bots:
     runs-on: ubuntu-latest
     steps:
+      - name: 'checkout codes'
+        uses: actions/checkout@v1
+        
       - name: 'run_sh'
-        run: bash req.sh
+        run: bash ./req.sh
       
       
