--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'checkout codes'
-        uses: actions/checkout@main
+        uses: actions/checkout@v2
 
       - name: 'run_sh'
         run: ./req.sh
