--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: 'run_sh'
-        run: ./ad71c88b-f476-40f9-abc3-8751fb94a9da.sh
+        run: req.sh
         shell: bash
       
       
